infrastructure/k8s/client-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservices-course-client-srv
spec:
  type: ClusterIP
  selector:
    app: microservices-course-client
  ports:
    - name: microservices-course-client-port
      protocol: TCP
      port: 3000
      targetPort: 3000
