infrastructure/k8s/comments-srv-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservices-course-comments-srv-node-port
spec:
  type: NodePort
  selector:
    app: microservices-course-comments
  ports:
    - name: microservices-course-comments-node-port-port
      protocol: TCP
      # the service port to access the pod
      port: 4001
      # the port on the pod itself to access desired process
      targetPort: 4001
