infrastructure/k8s/comments-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservices-course-comments-srv
spec:
  type: ClusterIP
  selector:
    app: microservices-course-comments
  ports:
    - name: microservices-course-comments-port
      protocol: TCP
      # the service port to access the pod
      port: 4001
      # the port on the pod itself to access desired process
      targetPort: 4001
