infrastructure/k8s/event-bus-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservices-course-event-bus-srv
spec:
  type: ClusterIP
  selector:
    app: microservices-course-event-bus
  ports:
    - name: microservices-course-event-bus-port
      protocol: TCP
      # the service port to access the pod
      port: 4005
      # the port on the pod itself to access desired process
      targetPort: 4005
