infrastructure/k8s/moderation-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservices-course-moderation-srv
spec:
  type: ClusterIP
  selector:
    app: microservices-course-moderation
  ports:
    - name: microservices-course-moderation-port
      protocol: TCP
      # the service port to access the pod
      port: 4003
      # the port on the pod itself to access desired process
      targetPort: 4003
