infrastructure/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservices-course-posts-srv
spec:
  type: ClusterIP
  selector:
    app: microservices-course-posts
  ports:
    - name: microservices-course-posts-port
      protocol: TCP
      # the service port to access the pod
      port: 4000
      # the port on the pod itself to access desired process
      targetPort: 4000
