infrastructure/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: microservices-course-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: microservices-course-posts.route
      http:
        paths:
          - path: /posts/create
            backend:
              serviceName: microservices-course-posts-srv
              servicePort: 4000
          - path: /posts
            backend:
              serviceName: microservices-course-query-service-srv
              servicePort: 4002
          - path: /posts/?(.*)/comments
            backend:
              serviceName: microservices-course-comments-srv
              servicePort: 4001
          - path: /?(.*)
            backend:
              serviceName: microservices-course-client-srv
              servicePort: 3000
